--- a/.env
+++ b/.env
@@ -1,6 +1,19 @@
-                   # Database Configuration
+# Database Configuration
 DB_HOST=in.leoxstudios.com
-DB_NAME=islands
+DB_PORT=3306
+DB_NAME=s3_mns
 DB_USER=u3_0D7sIfqUWW
 DB_PASSWORD=Z.SJrRzT8+i@+MI!U01.4cdf
-DB_PORT=3306
+
+# Server Configuration
+PROXY_SERVER=panel2.mcboss.top
+PROXY_PORT=25565
+SURVIVAL_SERVER=in.leoxstudios.com
+SURVIVAL_PORT=10007
+
+# Flask Configuration
+FLASK_DEBUG=True
+FLASK_SECRET_KEY=your_secure_secret_key_here
+
+# Logging Configuration
+LOG_LEVEL=INFO
